# asl

./: CMakeLists.txt  LICENSE  Makefile  README.md  todo
.github/workflows/: build.yml  lint.yaml  test.yaml
src/: main.cpp  slice.cpp  slice.h  wav.h
src/formats/: ulaw.h  wav.h
tests/: alaw.cpp  aux.h  ulaw.cpp  wav.cpp
